--- a/views/Registro.handlebars
+++ b/views/Registro.handlebars
@@ -18,7 +18,7 @@
             </div>
             <div class="form-group col-12 col-sm-6">
                 <label>Repita la password</label>
-                <input class="form-control m-auto" type="password" />
+                <input class="form-control m-auto" type="password" name="passwordConfirm"/>
             </div>
             <div class="form-group col-12 col-sm-6">
                 <label>Años de experiencia</label>
